--- a/overview.html
+++ b/overview.html
@@ -130,66 +130,65 @@
         </div>
     </main>
 
-    <!-- Update Weight Modal -->
-    <div id="updateWeightModal" class="hidden fixed z-10 inset-0 overflow-y-auto">
-        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-            <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-                <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
-            </div>
-            <!-- This element is to trick the browser into centering the modal contents. -->
-            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-            <div
-                class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
-                <div class="bg-blue-500 text-white px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                    <h3 class="text-lg leading-6 font-medium text-white" id="modal-title">Update Your Weight</h3>
-                </div>
-                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-                    <div class="sm:flex sm:items-start">
-                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
-                            <form id="weightUpdateForm">
-                                <div class="mt-2">
-                                    <label for="updateWeightValue"
-                                        class="block text-sm font-medium text-gray-700">Weight
-                                        (in kg):</label>
-                                    <input type="number" id="updateWeightValue"
-                                        class="input-text border rounded p-2 mt-1 w-full" required>
-                                </div>
-                                <div class="mt-4">
-                                    <button type="button" id="cancelWeightUpdate"
-                                        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Cancel</button>
-                                    <button type="submit" id="saveWeightUpdate" onclick="updateWeightAndCalories()"
-                                        class="mt-3 w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Save</button>
+    <!-- Weight Update Modal -->
+    <div id="weightUpdateModal"
+        class="hidden absolute top-0 left-0 w-full h-full bg-gray-900 bg-opacity-50 items-center justify-center">
+        <div class="bg-white p-5 rounded-lg">
+            <h2 class="text-lg">Weekly Check-In</h2>
+            <p>It's time for your weekly weight update.</p>
+            <input type="number" id="currentWeight" placeholder="Enter current weight"
+                class="border-2 border-gray-200 rounded">
+            <button onclick="handleWeightUpdate()"
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                Update
+            </button>
+        </div>
+    </div>
 
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+    <!-- Congratulations Modal -->
+    <div id="congratulationsModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full"
+        onclick="closeModal('congratulationsModal')">
+        <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
+            <div class="mt-3 text-center">
+                <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-green-100">
+                    <!-- Icon or Image Here -->
+                </div>
+                <h3 class="text-lg leading-6 font-medium text-gray-900">Congratulations!</h3>
+                <div class="mt-2 px-7 py-3">
+                    <p class="text-sm text-gray-500">
+                        Congratulations on your progress! Keep going!
+                    </p>
+                </div>
+                <div class="items-center px-4 py-3">
+                    <button id="okBtn"
+                        class="px-4 py-2 bg-green-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-300">
+                        OK
+                    </button>
                 </div>
             </div>
         </div>
     </div>
-
-    <!-- General Message Modal -->
-    <div id="messageModal" class="hidden fixed z-10 inset-0 overflow-y-auto">
-        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-            <div class="fixed inset-0 transition-opacity" aria-hidden="true">
-                <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
-            </div>
-            <!-- Modal content -->
-            <div
-                class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:align-middle sm:max-w-lg sm:w-full">
-                <!-- Header -->
-                <div class="bg-blue-500 text-white px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                    <h3 class="text-lg leading-6 font-medium text-white" id="modalMessageTitle">Message</h3>
+    
+    <!-- Goal Calories Adjustment Modal -->
+    <div id="goalAdjustmentModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full"
+        onclick="closeModal('goalAdjustmentModal')">
+        <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
+            <div class="mt-3 text-center">
+                <h3 class="text-lg leading-6 font-medium text-gray-900">Adjust Goal Calories?</h3>
+                <div class="mt-2 px-7 py-3">
+                    <p class="text-sm text-gray-500">
+                        You have not lost weight. Would you like to adjust your goal calories?
+                    </p>
                 </div>
-                <!-- Body -->
-                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-                    <p id="modalMessageContent" class="text-sm text-gray-700"></p>
-                </div>
-                <!-- Footer -->
-                <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-                    <button type="button" id="closeMessageModal"
-                        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">Close</button>
+                <div class="flex justify-center gap-4">
+                    <button id="yesAdjustBtn"
+                        class="px-4 py-2 bg-blue-500 text-white text-base font-medium rounded-md shadow-sm hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-300">
+                        Yes, adjust
+                    </button>
+                    <button id="noAdjustBtn"
+                        class="px-4 py-2 bg-red-500 text-white text-base font-medium rounded-md shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-300">
+                        No
+                    </button>
                 </div>
             </div>
         </div>
