--- a/navbars/home_nav_top.html
+++ b/navbars/home_nav_top.html
@@ -33,7 +33,7 @@
         </li>
         <!-- Food Library -->
         <li>
-          <a href="../my_recipes.html"
+          <a href="../my_categories.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Food Library</a>
         </li>
         <!-- Ingredients -->
